--- a/lab3/CubeRotation/cube.html
+++ b/lab3/CubeRotation/cube.html
@@ -5,6 +5,7 @@
     attribute vec4 vColor;
     varying vec4 fColor;
     uniform vec3 theta;
+    uniform float scale;
 
     void main() {
       // Compute the sines and cosines of theta for each of the three axes in one computation.
@@ -29,14 +30,21 @@
       );
 
       mat4 rz = mat4(
-        c.z, s.z, 0.0, 0.0,
-    	  -s.z,  c.z, 0.0, 0.0,
-    	  0.0,  0.0, 1.0, 0.0,
-    	  0.0,  0.0, 0.0, 1.0
+         c.z, s.z, 0.0, 0.0,
+    	  -s.z, c.z, 0.0, 0.0,
+    	   0.0, 0.0, 1.0, 0.0,
+    	   0.0, 0.0, 0.0, 1.0
+      );
+
+      mat4 scale = mat4(
+        scale, 0, 0, 0,
+        0, scale, 0, 0,
+        0, 0, scale, 0,
+        0, 0, 0, 1
       );
 
       fColor = vColor;
-      gl_Position = rz * ry * rx * vPosition;
+      gl_Position = scale * rz * ry * rx * vPosition;
       gl_Position.z = -gl_Position.z;
     }
   </script>
@@ -66,5 +74,9 @@
     <button id="xButton">Rotate X</button>
     <button id="yButton">Rotate Y</button>
     <button id="zButton">Rotate Z</button>
+    <br />
+    <button id="shrinkButton">Shrink</button>
+    <button id="resetButton">Reset</button>
+    <button id="increaseButton">Increase</button>
   </body>
 </html>
