--- a/lab3/TetrahedronOrtho/tetrahedron.html
+++ b/lab3/TetrahedronOrtho/tetrahedron.html
@@ -41,6 +41,30 @@
     <input id="phiSlider" type="range" min="1" max="359" step="5" value="10" />
     360
   </div>
+  <div>
+    width 0.1
+    <input
+      id="widthSlider"
+      type="range"
+      min="0.1"
+      max="5"
+      step="0.1"
+      value="1"
+    />
+    5
+  </div>
+  <div>
+    height 0.1
+    <input
+      id="heightSlider"
+      type="range"
+      min="0.1"
+      max="5"
+      step="0.1"
+      value="1"
+    />
+    5
+  </div>
 
   <script id="vertex-shader" type="x-shader/x-vertex">
     attribute vec4 vPosition;
